--- a/StrategyDesignPattern/StrategyDesignPattern/Views/_ViewImports.cshtml
+++ b/StrategyDesignPattern/StrategyDesignPattern/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using IdentityProject
-@using IdentityProject.Models
+﻿@using StrategyDesignPattern
+@using StrategyDesignPattern.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
